--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 		<!-- Converts decimal Week into weeks, days, hours, minutes, and seconds -->
 		<form>
-			Hour to Convert: <input type="number" id="convertWeek">
+			Decimal Week to Convert: <input type="number" id="convertWeek">
 		</form>
 		<button onclick="convertWeek()">Convert Decimal Week</button>
 		<div id="convertedWeek"></div> <br>
