--- a/index.html
+++ b/index.html
@@ -59,6 +59,20 @@
 		<button onclick="timeUntil()">Time Until Date</button>
 		<div id="timeUntilOutput"></div> <br>
 
+		<!-- Converts deary to binary -->
+		<form>
+			Denary Value: <input type="number" id="toBinaryValue">
+		</form>
+		<button onclick="toBinary()">Denary to Binary</button>
+		<div id="toBinaryOutput"></div> <br>
+
+		<!-- Calculate the approximate number of partitions an integer has -->
+		<form>
+			Value: <input type="number" id="partitionsValue">
+		</form>
+		<button onclick="partitions()">Number of Partitions</button>
+		<div id="partitionsOutput"></div> <br>
+
 		<!-- Other stuff -->
 		<button onclick="reload()">Reload Page</button>
 		<a href="https://twitter.com/the_banana_guy_" target="_blank">
