Rewrite #4 (final one)
Added normalDistribution and averages

And fix attempt #1 on timeUntil

--- a/index.html
+++ b/index.html
@@ -92,6 +92,24 @@
 		<button onclick="approximateSqrt()">Approximate Square Root</button>
 		<div id="approxSqrtOutput"></div> <br>
 
+		<!-- Normal Distribution Calculator -->
+		<form>
+			Value: <input type="number" id="ndfValue"> <br>
+			Mean: <input type="number" id="ndfMean"> <br>
+			Standard Deviation: <input type="number" id="ndfSD">
+		</form>
+		<button onclick="normalDistribution()">Normal Distribution Function</button>
+		<div id="ndfOutput"></div> <br>
+
+		<!-- Mode, Median and Mean calculator -->
+		<form>
+			Max: <input type="number" id="avgMax"> <br>
+			Min: <input type="number" id="avgMin"> <br>
+			Array Length: <input type="number" id="avgLength">
+		</form>
+		<button onclick="averages()">Mode, Median and Mean</button>
+		<div id="avgOutput"></div> <br>
+
 		<!-- Other stuff -->
 		<button onclick="reload()">Reload Page</button>
 		<a href="https://twitter.com/the_banana_guy_" target="_blank">
