--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<style>
 			body {
 				font-family: "proxima_nova", "Helvetica Neue", Arial, sans-serif;
-				color: #000000;
-				background-color: #FFFFFF;
+				color: #ffecdb;
+				background-color: #965173;
 				text-align: center;
 				vertical-align: middle; 
 			}
