Changed to a more preferable font-family

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!-- http://www.htmlbasix.com/stylesheet.shtml -->
 		<style>
 			body {
-				font-family: "proxima_nova", "Helvetica Neue", Arial, sans-serif;
+				font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial, sans-serif;
 				color: #ffecdb;
 				background-color: #965173;
 				text-align: center;
