--- a/index.html
+++ b/index.html
@@ -8,26 +8,9 @@
 
 		<title>Experimental V3</title>
 
-		<!-- http://www.htmlbasix.com/stylesheet.shtml -->
-		<style>
-			body {
-				font-family: "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", Calibri, Helvetica, Arial, sans-serif;
-				color: #ffecdb;
-				background-color: #965173;
-				text-align: center;
-				vertical-align: middle; 
-			}
-			h1 {
-				text-decoration: underline;
-			}
-			div {
-				font-size: 18px;
-			}
-			form {
-				font-size: 18px;
-				font-weight: bold;
-			}
-		</style>
+		<!-- CSS stuff -->
+		<link rel="stylesheet" href="css/normalize.css" type="text/css" charset="utf-8">
+		<link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8">
 
 		<!-- jQuery -->
 		<script src="http://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
