Added Morse Code converter

--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
 		<button onclick="averages()">Mode, Median and Mean</button>
 		<div id="avgOutput"></div> <br>
 
+		<!-- Morse Code Converter -->
+		<div align="center">
+			<textarea rows="4" cols="40" placeholder="Type your message here, either normal letters, numbers and punctuation or Morse code using '.' for a dot, '-' for a dash, separating letters by spaces and words by '/'" id="morseInput"></textarea>
+		</div>
+		<button onclick="morseConvert()">Convert Sentence or Morse Code</button>
+		<div id="morseOutput"></div> <br>
+
 		<!-- Other stuff -->
 		<button onclick="reload()">Reload Page</button>
 		<a href="https://twitter.com/the_banana_guy_" target="_blank">
