Added iteration function

--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
 		<button onclick="morseConvert()">Convert Sentence or Morse Code</button>
 		<div id="morseOutput"></div> <br>
 
+		<!-- Numerical Methods: Iterations -->
+		<form>
+			Starting Number: <input type="number" id="iterationStart"> <br>
+			Significant Figures: <input type="number" id="iterationSigFigures">
+		</form>
+		<button onclick="iteration()">Iterations</button>
+		<div id="iterationOutput"></div> <br>		
+
 		<!-- Other stuff -->
 		<button onclick="reload()">Reload Page</button>
 		<a href="https://twitter.com/the_banana_guy_" target="_blank">
