--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Experimental V3</title>
+
 		<meta http-equiv="content-type" content="text/html charset=UTF-8">
 
 		<!-- Resizable on mobile devices -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Experimental V3</title>
-
-		<!-- CSS stuff -->
-		<link rel="stylesheet" href="css/normalize.css" type="text/css" charset="utf-8">
-		<link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8">
-
-		<!-- jQuery -->
-		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
-
 		<!-- Favicon -->
+		<meta name="msapplication-TileColor" content="#360000">
+		<meta name="msapplication-TileImage" content="icon/ms-icon-144x144.png">
+		<meta name="theme-color" content="#360000">
+		<link rel="manifest" href="icon/manifest.json">
 		<link rel="apple-touch-icon" sizes="57x57" href="icon/apple-icon-57x57.png">
 		<link rel="apple-touch-icon" sizes="60x60" href="icon/apple-icon-60x60.png">
 		<link rel="apple-touch-icon" sizes="72x72" href="icon/apple-icon-72x72.png">
@@ -29,10 +26,14 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="96x96" href="icon/favicon-96x96.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
-		<link rel="manifest" href="icon/manifest.json">
-		<meta name="msapplication-TileColor" content="#360000">
-		<meta name="msapplication-TileImage" content="icon/ms-icon-144x144.png">
-		<meta name="theme-color" content="#360000">
+
+
+		<!-- CSS stuff -->
+		<link rel="stylesheet" href="css/normalize.css" type="text/css" charset="utf-8">
+		<link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8">
+
+		<!-- jQuery -->
+		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 
 		<script type="text/javascript" src="main.js"></script>
 	</head>
@@ -114,7 +115,7 @@
 
 		<!-- Morse Code Converter -->
 		<div align="center">
-			<textarea rows="4" cols="40" placeholder="Type your message here, either normal letters, numbers and punctuation or Morse code using '.' for a dot, '-' for a dash, separating letters by spaces and words by '/'" id="morseInput"></textarea>
+			<textarea rows="4" cols="40" placeholder="Type your message here, either normal letters, numbers, and punctuation or Morse code using '.' for a dot, '-' for a dash, separating letters by spaces and words by '/'. Also, separate Morse code letters with space" id="morseInput"></textarea>
 		</div>
 		<button onclick="morseConvert()">Convert Sentence or Morse Code</button>
 		<div id="morseOutput"></div> <br>
@@ -125,7 +126,15 @@
 			Significant Figures: <input type="number" id="iterationSigFigures">
 		</form>
 		<button onclick="iteration()">Iterations</button>
-		<div id="iterationOutput"></div> <br>		
+		<div id="iterationOutput"></div> <br>	
+
+		<!-- Estimating PI using the Monte Carlo Method -->
+		<form>
+			Max: <input type="number" id="monteCarloMax"> <br>
+			Number of Repetitions: <input type="number" id="monteCarloRep">
+		</form>
+		<button onclick="monteCarlo()">Monte Carlo Method</button>
+		<div id="monteCarloOutput"></div> <br>	
 
 		<!-- Other stuff -->
 		<button onclick="reload()">Reload Page</button>
