Added happyNumbers() function

--- a/index.html
+++ b/index.html
@@ -142,6 +142,12 @@
 		<button onclick="base64Convert()">Convert to Base-64</button>
 		<div id="base64ConvertOutput"></div> <br>
 
+		<form>
+			Number: <input type="number" id="happyNumbersInput">
+		</form>
+		<button onclick="happyNumbers()">Is it a Happy Number?</button>
+		<div id="happyNumbersOutput"></div> <br>
+
 		<!-- Other stuff -->
 		<button onclick="reload()">Reload Page</button>
 		<a href="https://twitter.com/the_banana_guy_" target="_blank">
