--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8">
 
 		<!-- jQuery -->
-		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
+		<script src="http://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
 
 		<script type="text/javascript" src="main.js"></script>
 	</head>
