Added noscript tag

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 	<body>
 		<h1>EXPERIMENTAL SCRIPTS V3</h1>
 
+		<noscript>Your browser doesn't support JavaScript or does not have JavaScript enabled</noscript> <br>
+
 		<!-- Displays prime numbers between two numbers -->
 		<form>
 			Max: <input type="number" id="primesMax"> <br>
