--- a/index.html
+++ b/index.html
@@ -1,162 +1,175 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Experimental V3</title>
 
-		<meta http-equiv="content-type" content="text/html charset=UTF-8">
+<head>
+	<title>Experimental V3</title>
 
-		<!-- Resizable on mobile devices -->
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="content-type" content="text/html charset=UTF-8">
 
-		<!-- Favicon -->
-		<meta name="msapplication-TileColor" content="#360000">
-		<meta name="msapplication-TileImage" content="icon/ms-icon-144x144.png">
-		<meta name="theme-color" content="#360000">
-		<link rel="manifest" href="icon/manifest.json">
-		<link rel="apple-touch-icon" sizes="57x57" href="icon/apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="icon/apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="icon/apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="icon/apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="icon/apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="icon/apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="icon/apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="icon/apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="icon/apple-icon-180x180.png">
-		<link rel="icon" type="image/png" sizes="192x192" href="icon/android-icon-192x192.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="icon/favicon-96x96.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
-		
-		<!-- CSS stuff -->
-		<link rel="stylesheet" href="css/normalize.css" type="text/css" charset="utf-8">
-		<link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8">
+	<!-- Resizable on mobile devices -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<!-- jQuery -->
-		<script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
+	<!-- Favicon -->
+	<meta name="msapplication-TileColor" content="#360000">
+	<meta name="msapplication-TileImage" content="icon/ms-icon-144x144.png">
+	<meta name="theme-color" content="#360000">
+	<link rel="manifest" href="icon/manifest.json">
+	<link rel="apple-touch-icon" sizes="57x57" href="icon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="icon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="icon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="icon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="icon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="icon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="icon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="icon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="icon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="icon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="icon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
 
-		<script type="text/javascript" src="main.js"></script>
-	</head>
-	<body>
-		<h1>EXPERIMENTAL SCRIPTS V3</h1>
+	<!-- CSS stuff -->
+	<link rel="stylesheet" href="css/normalize.css" type="text/css" charset="utf-8">
+	<link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8">
 
-		<noscript>Your browser doesn't support JavaScript or does not have JavaScript enabled</noscript> <br>
+	<!-- jQuery -->
+	<script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
 
-		<!-- Displays prime numbers between two numbers -->
-		<form>
-			Max: <input type="number" id="primesMax"> <br>
-			Min: <input type="number" id="primesMin">
-		</form>
-		<button onclick="getPrimes()">Get Primes</button>
-		<div id="primes"></div> <br>
+	<script type="text/javascript" src="main.js"></script>
 
-		<!-- Converts decimal Week into weeks, days, hours, minutes, and seconds -->
-		<form>
-			Decimal Week to Convert: <input type="number" id="convertWeek">
-		</form>
-		<button onclick="convertWeek()">Convert Decimal Week</button>
-		<div id="convertedWeek"></div> <br>
+	<!-- http://www.accessify.com/tools-and-wizards/developer-tools/html-javascript-convertor/ -->
+	<script type="text/javascript">
+		function writeHTMLasJS() {
+			document.write("<!-- Displays prime numbers between two numbers -->");
+			document.write("<form>");
+			document.write("	Max: <input type=\"number\" id=\"primesMax\"> <br>");
+			document.write("	Min: <input type=\"number\" id=\"primesMin\">");
+			document.write("<\/form>");
+			document.write("<button onclick=\"getPrimes()\">Get Primes<\/button>");
+			document.write("<div id=\"primes\"><\/div> <br>");
+			document.write("");
+			document.write("<!-- Converts decimal Week into weeks, days, hours, minutes, and seconds -->");
+			document.write("<form>");
+			document.write("	Decimal Week to Convert: <input type=\"number\" id=\"convertWeek\">");
+			document.write("<\/form>");
+			document.write("<button onclick=\"convertWeek()\">Convert Decimal Week<\/button>");
+			document.write("<div id=\"convertedWeek\"><\/div> <br>");
+			document.write("");
+			document.write("<!-- Outputs time until future date -->");
+			document.write("<form>");
+			document.write("	Future Date (like this - August 08, 2017 15:19:45): <input type=\"text\" id=\"timeUntilDate\">");
+			document.write("<\/form>");
+			document.write("<button onclick=\"timeUntil()\">Time Until Date<\/button>");
+			document.write("<div id=\"timeUntilOutput\"><\/div> <br>");
+			document.write("");
+			document.write("<!-- Converts deary to binary -->");
+			document.write("<form>");
+			document.write("	Denary Value: <input type=\"number\" id=\"toBinaryValue\">");
+			document.write("<\/form>");
+			document.write("<button onclick=\"toBinary()\">Denary to Binary<\/button>");
+			document.write("<div id=\"toBinaryOutput\"><\/div> <br>");
+			document.write("");
+			document.write("<!-- Calculate the approximate number of partitions an integer has -->");
+			document.write("<form>");
+			document.write("	Value: <input type=\"number\" id=\"partitionsValue\">");
+			document.write("<\/form>");
+			document.write("<button onclick=\"partitions()\">Number of Partitions<\/button>");
+			document.write("<div id=\"partitionsOutput\"><\/div> <br>");
+			document.write("");
+			document.write("<!-- Generates a random factorable, quadratic formula -->");
+			document.write("<button onclick=\"factorableQuadratic()\">Factorable Quadratic<\/button>");
+			document.write("<div id=\"factorableOutput\"><\/div> <br>");
+			document.write("");
+			document.write("<!-- Calculates the median, the other quartiles and the interquartile range -->");
+			document.write("<form>");
+			document.write("	Length: <input type=\"number\" id=\"IQRLength\"> <br>");
+			document.write("	Max: <input type=\"number\" id=\"IQRMax\">");
+			document.write("<\/form>");
+			document.write("<button onclick=\"medianIQR()\">Quartiles and IQR<\/button>");
+			document.write("<div id=\"IQROutput\"><\/div> <br>");
+			document.write("");
+			document.write("<!-- A written method of finding the approximate square root -->");
+			document.write("<form>");
+			document.write("	Value: <input type=\"number\" id=\"sqrtOf\">");
+			document.write("<\/form>");
+			document.write("<button onclick=\"approximateSqrt()\">Approximate Square Root<\/button>");
+			document.write("<div id=\"approxSqrtOutput\"><\/div> <br>");
+			document.write("");
+			document.write("<!-- Normal Distribution Calculator -->");
+			document.write("<form>");
+			document.write("	Value: <input type=\"number\" id=\"ndfValue\"> <br>");
+			document.write("	Mean: <input type=\"number\" id=\"ndfMean\"> <br>");
+			document.write("	Standard Deviation: <input type=\"number\" id=\"ndfSD\">");
+			document.write("<\/form>");
+			document.write("<button onclick=\"normalDistribution()\">Normal Distribution Function<\/button>");
+			document.write("<div id=\"ndfOutput\"><\/div> <br>");
+			document.write("");
+			document.write("<!-- Mode, Median and Mean calculator -->");
+			document.write("<form>");
+			document.write("	Max: <input type=\"number\" id=\"avgMax\"> <br>");
+			document.write("	Min: <input type=\"number\" id=\"avgMin\"> <br>");
+			document.write("	Array Length: <input type=\"number\" id=\"avgLength\">");
+			document.write("<\/form>");
+			document.write("<button onclick=\"averages()\">Mode, Median and Mean<\/button>");
+			document.write("<div id=\"avgOutput\"><\/div> <br>");
+			document.write("");
+			document.write("<!-- Morse Code Converter -->");
+			document.write("<div align=\"center\">");
+			document.write("	<textarea rows=\"4\" cols=\"40\" placeholder=\"Type your message here, either normal letters, numbers, and punctuation or Morse code using '.' for a dot, '-' for a dash, separating letters by spaces and words by '\/'. Also, separate Morse code letters with space\" id=\"morseInput\"><\/textarea>");
+			document.write("<\/div>");
+			document.write("<button onclick=\"morseConvert()\">Convert Sentence or Morse Code<\/button>");
+			document.write("<div id=\"morseOutput\"><\/div> <br>");
+			document.write("");
+			document.write("<!-- Numerical Methods: Iterations -->");
+			document.write("<form>");
+			document.write("	Starting Number: <input type=\"number\" id=\"iterationStart\"> <br>");
+			document.write("	Significant Figures: <input type=\"number\" id=\"iterationSigFigures\">");
+			document.write("<\/form>");
+			document.write("<button onclick=\"iteration()\">Iterations<\/button>");
+			document.write("<div id=\"iterationOutput\"><\/div> <br>	");
+			document.write("");
+			document.write("<!-- Estimating PI using the Monte Carlo Method -->");
+			document.write("<form>");
+			document.write("	Max: <input type=\"number\" id=\"monteCarloMax\"> <br>");
+			document.write("	Number of Repetitions: <input type=\"number\" id=\"monteCarloRep\">");
+			document.write("<\/form>");
+			document.write("<button onclick=\"monteCarlo()\">Monte Carlo Method<\/button>");
+			document.write("<div id=\"monteCarloOutput\"><\/div> <br>");
+			document.write("");
+			document.write("<!-- Number to Base 64 -->");
+			document.write("<form>");
+			document.write("	Number to Base-64: <input type=\"number\" id=\"base64ConvertNum\">");
+			document.write("<\/form>");
+			document.write("<button onclick=\"base64Convert()\">Convert to Base-64<\/button>");
+			document.write("<div id=\"base64ConvertOutput\"><\/div> <br>");
+			document.write("");
+			document.write("<form>");
+			document.write("	Number: <input type=\"number\" id=\"happyNumbersInput\">");
+			document.write("<\/form>");
+			document.write("<button onclick=\"happyNumbers()\">Is it a Happy Number?<\/button>");
+			document.write("<div id=\"happyNumbersOutput\"><\/div> <br>");
+			document.write("");
+			document.write("<!-- Other stuff -->");
+			document.write("<button onclick=\"reload()\">Reload Page<\/button>");
+			document.write("<a href=\"https:\/\/twitter.com\/the_banana_guy_\" target=\"_blank\">");
+			document.write("	<button>By kakol20<\/button>");
+			document.write("<\/a>");
+			document.write("<a href=\"https:\/\/github.com\/kakol20\/Experimental-V3\" target=\"_blank\">");
+			document.write("	<button>Github Page<\/button>");
+			document.write("<\/a>");
+		}
+	</script>
+</head>
 
-		<!-- Outputs time until future date -->
-		<form>
-			Future Date (like this - August 08, 2017 15:19:45): <input type="text" id="timeUntilDate">
-		</form>
-		<button onclick="timeUntil()">Time Until Date</button>
-		<div id="timeUntilOutput"></div> <br>
+<body>
+	<h1>EXPERIMENTAL SCRIPTS V3</h1>
 
-		<!-- Converts deary to binary -->
-		<form>
-			Denary Value: <input type="number" id="toBinaryValue">
-		</form>
-		<button onclick="toBinary()">Denary to Binary</button>
-		<div id="toBinaryOutput"></div> <br>
+	<noscript>Your browser doesn't support JavaScript or does not have JavaScript enabled</noscript> <br>
 
-		<!-- Calculate the approximate number of partitions an integer has -->
-		<form>
-			Value: <input type="number" id="partitionsValue">
-		</form>
-		<button onclick="partitions()">Number of Partitions</button>
-		<div id="partitionsOutput"></div> <br>
 
-		<!-- Generates a random factorable, quadratic formula -->
-		<button onclick="factorableQuadratic()">Factorable Quadratic</button>
-		<div id="factorableOutput"></div> <br>
+	<script type="text/javascript">
+		writeHTMLasJS();
+	</script>
+</body>
 
-		<!-- Calculates the median, the other quartiles and the interquartile range -->
-		<form>
-			Length: <input type="number" id="IQRLength"> <br>
-			Max: <input type="number" id="IQRMax">
-		</form>
-		<button onclick="medianIQR()">Quartiles and IQR</button>
-		<div id="IQROutput"></div> <br>
-
-		<!-- A written method of finding the approximate square root -->
-		<form>
-			Value: <input type="number" id="sqrtOf">
-		</form>
-		<button onclick="approximateSqrt()">Approximate Square Root</button>
-		<div id="approxSqrtOutput"></div> <br>
-
-		<!-- Normal Distribution Calculator -->
-		<form>
-			Value: <input type="number" id="ndfValue"> <br>
-			Mean: <input type="number" id="ndfMean"> <br>
-			Standard Deviation: <input type="number" id="ndfSD">
-		</form>
-		<button onclick="normalDistribution()">Normal Distribution Function</button>
-		<div id="ndfOutput"></div> <br>
-
-		<!-- Mode, Median and Mean calculator -->
-		<form>
-			Max: <input type="number" id="avgMax"> <br>
-			Min: <input type="number" id="avgMin"> <br>
-			Array Length: <input type="number" id="avgLength">
-		</form>
-		<button onclick="averages()">Mode, Median and Mean</button>
-		<div id="avgOutput"></div> <br>
-
-		<!-- Morse Code Converter -->
-		<div align="center">
-			<textarea rows="4" cols="40" placeholder="Type your message here, either normal letters, numbers, and punctuation or Morse code using '.' for a dot, '-' for a dash, separating letters by spaces and words by '/'. Also, separate Morse code letters with space" id="morseInput"></textarea>
-		</div>
-		<button onclick="morseConvert()">Convert Sentence or Morse Code</button>
-		<div id="morseOutput"></div> <br>
-
-		<!-- Numerical Methods: Iterations -->
-		<form>
-			Starting Number: <input type="number" id="iterationStart"> <br>
-			Significant Figures: <input type="number" id="iterationSigFigures">
-		</form>
-		<button onclick="iteration()">Iterations</button>
-		<div id="iterationOutput"></div> <br>	
-
-		<!-- Estimating PI using the Monte Carlo Method -->
-		<form>
-			Max: <input type="number" id="monteCarloMax"> <br>
-			Number of Repetitions: <input type="number" id="monteCarloRep">
-		</form>
-		<button onclick="monteCarlo()">Monte Carlo Method</button>
-		<div id="monteCarloOutput"></div> <br>
-
-		<!-- Number to Base 64 -->
-		<form>
-			Number to Base-64: <input type="number" id="base64ConvertNum">
-		</form>
-		<button onclick="base64Convert()">Convert to Base-64</button>
-		<div id="base64ConvertOutput"></div> <br>
-
-		<form>
-			Number: <input type="number" id="happyNumbersInput">
-		</form>
-		<button onclick="happyNumbers()">Is it a Happy Number?</button>
-		<div id="happyNumbersOutput"></div> <br>
-
-		<!-- Other stuff -->
-		<button onclick="reload()">Reload Page</button>
-		<a href="https://twitter.com/the_banana_guy_" target="_blank">
-			<button>By kakol20</button>
-		</a>
-		<a href="https://github.com/kakol20/Experimental-V3" target="_blank">
-			<button>Github Page</button>
-		</a>
-	</body>
 </html>
