--- a/index.html
+++ b/index.html
@@ -164,7 +164,15 @@
 <body>
 	<h1>EXPERIMENTAL SCRIPTS V3</h1>
 
-	<noscript>Your browser doesn't support JavaScript or does not have JavaScript enabled</noscript> <br>
+	<noscript>
+		Your browser doesn't support JavaScript or does not have JavaScript enabled <br><br>
+		<a href="https://twitter.com/the_banana_guy_" target="_blank">
+			<button>By kakol20</button>
+		</a>
+		<a href="https://github.com/kakol20/Experimental-V3" target="_blank">
+			<button>Github Page</button>
+		</a>
+	</noscript>
 
 	<script type="text/javascript">
 		writeHTMLasJS();
