Minified writeHTMLasJS() function

--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
 		Your browser doesn't support JavaScript or does not have JavaScript enabled <br><br>
 	</noscript>
 
+	<!-- HTML Version found in body.html -->
 	<script type="text/javascript">
 		writeHTMLasJS();
 	</script>
 
+	<!-- Other -->
 	<a href="https://twitter.com/the_banana_guy_" target="_blank">
 		<button>By kakol20</button>
 	</a>
