--- a/body.html
+++ b/body.html
@@ -104,6 +104,7 @@
 <button onclick="base64Convert()">Convert to Base-64</button>
 <div id="base64ConvertOutput"></div> <br>
 
+<!-- Finds out if the number inputted is a Happy Number -->
 <form>
 	Number: <input type="number" id="happyNumbersInput">
 </form>
