--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<button>Github Page</button>
 	</a>
 
-	<a href="test.html/">
+	<a src="test.html">
 		<button>Test Page</button>
 	</a>
 </body>
