Revert "Does SRC work?"
This reverts commit edb77a30634bf5f6d291a0d58551b4f580cdd65a.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<button>Github Page</button>
 	</a>
 
-	<a src="test.html">
+	<a href="test.html/">
 		<button>Test Page</button>
 	</a>
 </body>
