Testing if changing name will work
Kept seeing this:
http://image.prntscr.com/image/cbaa3d3771ac45619dcabb79a188555b.png

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 	<!-- HTML Version found in body.html -->
 	<script type="text/javascript">
-		writeHTMLasJS();
+		body();
 	</script>
 
 	<!-- Other -->
