--- a/body.html
+++ b/body.html
@@ -1,10 +1,15 @@
+<link rel="stylesheet" href="css/normalize.css" type="text/css" charset="utf-8">
+<link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8">
+<script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
+<script type="text/javascript" src="main.js"></script>
+
 <!-- Use the following website -->
 <!-- http://www.accessify.com/tools-and-wizards/developer-tools/html-javascript-convertor/ -->
 
 <!-- Displays prime numbers between two numbers -->
 <form>
-	Max: <input type="number" id="primesMax"> <br>
-	Min: <input type="number" id="primesMin">
+	Max: <input type="number" id="primesMax" min="2"> <br>
+	Min: <input type="number" id="primesMin" min="1">
 </form>
 <button onclick="getPrimes()">Get Primes</button>
 <div id="primes"></div> <br>
@@ -17,22 +22,22 @@
 <div id="convertedWeek"></div> <br>
 
 <!-- Outputs time until future date -->
-<form>
-	Future Date (like this - August 08, 2017 15:19:45): <input type="text" id="timeUntilDate">
-</form>
+<div align="center">
+	<textarea rows="4" cols="40" placeholder="Type the date like this: November 22, 2017 19:23:45" id="timeUntilDate"></textarea>
+</div>
 <button onclick="timeUntil()">Time Until Date</button>
 <div id="timeUntilOutput"></div> <br>
 
 <!-- Converts deary to binary -->
 <form>
-	Denary Value: <input type="number" id="toBinaryValue">
+	Denary Value: <input type="number" id="toBinaryValue" min="1">
 </form>
 <button onclick="toBinary()">Denary to Binary</button>
 <div id="toBinaryOutput"></div> <br>
 
 <!-- Calculate the approximate number of partitions an integer has -->
 <form>
-	Value: <input type="number" id="partitionsValue">
+	Value: <input type="number" id="partitionsValue" min="1">
 </form>
 <button onclick="partitions()">Number of Partitions</button>
 <div id="partitionsOutput"></div> <br>
@@ -43,7 +48,7 @@
 
 <!-- Calculates the median, the other quartiles and the interquartile range -->
 <form>
-	Length: <input type="number" id="IQRLength"> <br>
+	Length: <input type="number" id="IQRLength" min="1"> <br>
 	Max: <input type="number" id="IQRMax">
 </form>
 <button onclick="medianIQR()">Quartiles and IQR</button>
@@ -69,7 +74,7 @@
 <form>
 	Max: <input type="number" id="avgMax"> <br>
 	Min: <input type="number" id="avgMin"> <br>
-	Array Length: <input type="number" id="avgLength">
+	Array Length: <input type="number" id="avgLength" min="1">
 </form>
 <button onclick="averages()">Mode, Median and Mean</button>
 <div id="avgOutput"></div> <br>
@@ -82,31 +87,35 @@
 <div id="morseOutput"></div> <br>
 
 <!-- Numerical Methods: Iterations -->
+<div class="bold">x³ + ax² + bx + c</div>
 <form>
 	Starting Number: <input type="number" id="iterationStart"> <br>
-	Significant Figures: <input type="number" id="iterationSigFigures">
+	Significant Figures: <input type="number" id="iterationSigFigures" min="1"> <br>
+	a: <input type="number" id="iterationA"> <br>
+	b: <input type="number" id="iterationB"> <br>
+	c: <input type="number" id="iterationC">
 </form>
 <button onclick="iteration()">Iterations</button>
 <div id="iterationOutput"></div> <br>	
 
 <!-- Estimating PI using the Monte Carlo Method -->
 <form>
-	Max: <input type="number" id="monteCarloMax"> <br>
-	Number of Repetitions: <input type="number" id="monteCarloRep">
+	Max: <input type="number" id="monteCarloMax" min="1"> <br>
+	Number of Repetitions: <input type="number" id="monteCarloRep" min="1">
 </form>
 <button onclick="monteCarlo()">Monte Carlo Method</button>
 <div id="monteCarloOutput"></div> <br>
 
 <!-- Number to Base 64 -->
 <form>
-	Number to Base-64: <input type="number" id="base64ConvertNum">
+	Number to Base-64: <input type="number" id="base64ConvertNum" min="1">
 </form>
 <button onclick="base64Convert()">Convert to Base-64</button>
 <div id="base64ConvertOutput"></div> <br>
 
 <!-- Finds out if the number inputted is a Happy Number -->
 <form>
-	Number: <input type="number" id="happyNumbersInput">
+	Number: <input type="number" id="happyNumbersInput" min="1">
 </form>
 <button onclick="happyNumbers()">Is it a Happy Number?</button>
 <div id="happyNumbersOutput"></div> <br>
@@ -116,19 +125,22 @@
 
 <!-- WITHOUT NOTES & MINIFIED http://www.willpeavy.com/minifier/ --> 
 
-<form> Max: <input type="number" id="primesMax"> <br> Min: <input type="number" id="primesMin"> </form> <button onclick="getPrimes()">Get Primes</button> <div id="primes"></div> <br>
+<!--
+
+<form> Max: <input type="number" id="primesMax" min="2"> <br> Min: <input type="number" id="primesMin" min="1"> </form> <button onclick="getPrimes()">Get Primes</button> <div id="primes"></div> <br>
 <form> Decimal Week to Convert: <input type="number" id="convertWeek"> </form> <button onclick="convertWeek()">Convert Decimal Week</button> <div id="convertedWeek"></div> <br>
-<form> Future Date (like this - August 08, 2017 15:19:45): <input type="text" id="timeUntilDate"> </form> <button onclick="timeUntil()">Time Until Date</button> <div id="timeUntilOutput"></div> <br>
-<form> Denary Value: <input type="number" id="toBinaryValue"> </form> <button onclick="toBinary()">Denary to Binary</button> <div id="toBinaryOutput"></div> <br>
-<form> Value: <input type="number" id="partitionsValue"> </form> <button onclick="partitions()">Number of Partitions</button> <div id="partitionsOutput"></div> <br>
+<div align="center"> <textarea rows="4" cols="40" placeholder="Type the date like this: November 22, 2017 19:23:45" id="timeUntilDate"></textarea> </div> <button onclick="timeUntil()">Time Until Date</button> <div id="timeUntilOutput"></div> <br>
+<form> Denary Value: <input type="number" id="toBinaryValue" min="1"> </form> <button onclick="toBinary()">Denary to Binary</button> <div id="toBinaryOutput"></div> <br>
+<form> Value: <input type="number" id="partitionsValue" min="1"> </form> <button onclick="partitions()">Number of Partitions</button> <div id="partitionsOutput"></div> <br>
 <button onclick="factorableQuadratic()">Factorable Quadratic</button> <div id="factorableOutput"></div> <br>
-<form> Length: <input type="number" id="IQRLength"> <br> Max: <input type="number" id="IQRMax"> </form> <button onclick="medianIQR()">Quartiles and IQR</button> <div id="IQROutput"></div> <br>
+<form> Length: <input type="number" id="IQRLength" min="1"> <br> Max: <input type="number" id="IQRMax"> </form> <button onclick="medianIQR()">Quartiles and IQR</button> <div id="IQROutput"></div> <br>
 <form> Value: <input type="number" id="sqrtOf"> </form> <button onclick="approximateSqrt()">Approximate Square Root</button> <div id="approxSqrtOutput"></div> <br>
 <form> Value: <input type="number" id="ndfValue"> <br> Mean: <input type="number" id="ndfMean"> <br> Standard Deviation: <input type="number" id="ndfSD"> </form> <button onclick="normalDistribution()">Normal Distribution Function</button> <div id="ndfOutput"></div> <br>
-<form> Max: <input type="number" id="avgMax"> <br> Min: <input type="number" id="avgMin"> <br> Array Length: <input type="number" id="avgLength"> </form> <button onclick="averages()">Mode, Median and Mean</button> <div id="avgOutput"></div> <br>
+<form> Max: <input type="number" id="avgMax"> <br> Min: <input type="number" id="avgMin"> <br> Array Length: <input type="number" id="avgLength" min="1"> </form> <button onclick="averages()">Mode, Median and Mean</button> <div id="avgOutput"></div> <br>
 <div align="center"> <textarea rows="4" cols="40" placeholder="Type your message here, either normal letters, numbers, and punctuation or Morse code using '.' for a dot, '-' for a dash, separating letters by spaces and words by '/'. Also, separate Morse code letters with space" id="morseInput"></textarea> </div> <button onclick="morseConvert()">Convert Sentence or Morse Code</button> <div id="morseOutput"></div> <br>
-<form> Starting Number: <input type="number" id="iterationStart"> <br> Significant Figures: <input type="number" id="iterationSigFigures"> </form> <button onclick="iteration()">Iterations</button> <div id="iterationOutput"></div> <br>	
-<form> Max: <input type="number" id="monteCarloMax"> <br> Number of Repetitions: <input type="number" id="monteCarloRep"> </form> <button onclick="monteCarlo()">Monte Carlo Method</button> <div id="monteCarloOutput"></div> <br>
-<form> Number to Base-64: <input type="number" id="base64ConvertNum"> </form> <button onclick="base64Convert()">Convert to Base-64</button> <div id="base64ConvertOutput"></div> <br>
-<form> Number: <input type="number" id="happyNumbersInput"> </form> <button onclick="happyNumbers()">Is it a Happy Number?</button> <div id="happyNumbersOutput"></div> <br>
+<div class="bold">x³ + ax² + bx + c</div> <form> Starting Number: <input type="number" id="iterationStart"> <br> Significant Figures: <input type="number" id="iterationSigFigures" min="1"> <br> a: <input type="number" id="iterationA"> <br> b: <input type="number" id="iterationB"> <br> c: <input type="number" id="iterationC"> </form> <button onclick="iteration()">Iterations</button> <div id="iterationOutput"></div> <br>	
+<form> Max: <input type="number" id="monteCarloMax" min="1"> <br> Number of Repetitions: <input type="number" id="monteCarloRep" min="1"> </form> <button onclick="monteCarlo()">Monte Carlo Method</button> <div id="monteCarloOutput"></div> <br>
+<form> Number to Base-64: <input type="number" id="base64ConvertNum" min="1"> </form> <button onclick="base64Convert()">Convert to Base-64</button> <div id="base64ConvertOutput"></div> <br> <form> Number: <input type="number" id="happyNumbersInput" min="1"> </form> <button onclick="happyNumbers()">Is it a Happy Number?</button> <div id="happyNumbersOutput"></div> <br>
 <button onclick="reload()">Reload Page</button>
+
+-->
