Added a little design for the title

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 </head>
 
 <body>
-	<h1>EXPERIMENTAL SCRIPTS V3</h1>
+	<h1>1</h1>
+	<div class="titleBG">
+		<div class="titleText">Experimental Scripts V3</div>
+	</div>
 
 	<noscript>
 		Your browser doesn't support JavaScript or does not have JavaScript enabled <br><br>
