Trying to make it work for mobile

--- a/index.html
+++ b/index.html
@@ -39,27 +39,29 @@
 </head>
 
 <body>
-	<h1>1</h1>
-	<div class="titleBG">
-		<div class="titleText">Experimental Scripts V3</div>
+	<div class="header">
+		<div class="titleText">
+			<p>Experimental Scripts V3</p>
+		</div>
+	</div> <br>
+	<div class="body">
+		<noscript>
+			Your browser doesn't support JavaScript or does not have JavaScript enabled <br><br>
+		</noscript>
+
+		<!-- HTML Version found in body.html -->
+		<script type="text/javascript">
+			body();
+		</script>
+
+		<!-- Other -->
+		<a href="https://twitter.com/the_banana_guy_" target="_blank">
+			<button>By kakol20</button>
+		</a>
+		<a href="https://github.com/kakol20/Experimental-V3" target="_blank">
+			<button>Github Page</button>
+		</a>
 	</div>
-
-	<noscript>
-		Your browser doesn't support JavaScript or does not have JavaScript enabled <br><br>
-	</noscript>
-
-	<!-- HTML Version found in body.html -->
-	<script type="text/javascript">
-		body();
-	</script>
-
-	<!-- Other -->
-	<a href="https://twitter.com/the_banana_guy_" target="_blank">
-		<button>By kakol20</button>
-	</a>
-	<a href="https://github.com/kakol20/Experimental-V3" target="_blank">
-		<button>Github Page</button>
-	</a>
 </body>
 
 </html>
