Wanted to see what's wrong with my code

--- a/body.html
+++ b/body.html
@@ -11,7 +11,11 @@
 	Max: <input type="number" id="primesMax" min="2"> <br>
 	Min: <input type="number" id="primesMin" min="1">
 </form>
-<button onclick="getPrimes()">Get Primes</button>
+<button onclick="getPrimes()">
+	<div>
+		<p>Get Primes</p>
+	</div>
+</button>
 <div id="primes"></div> <br>
 
 <!-- Converts decimal Week into weeks, days, hours, minutes, and seconds -->
