--- a/index.html
+++ b/index.html
@@ -49,10 +49,126 @@
 			Your browser doesn't support JavaScript or does not have JavaScript enabled <br><br>
 		</noscript>
 
-		<!-- HTML Version found in body.html -->
-		<script type="text/javascript">
-			body();
-		</script>
+		<!-- Displays prime numbers between two numbers -->
+		<form>
+			Max: <input type="number" id="primesMax" min="2"> <br>
+			Min: <input type="number" id="primesMin" min="1">
+		</form>
+		<button onclick="getPrimes()">
+			<div>
+				<p>Get Primes</p>
+			</div>
+		</button>
+		<div id="primes"></div> <br>
+
+		<!-- Converts decimal Week into weeks, days, hours, minutes, and seconds -->
+		<form>
+			Decimal Week to Convert: <input type="number" id="convertWeek">
+		</form>
+		<button onclick="convertWeek()">Convert Decimal Week</button>
+		<div id="convertedWeek"></div> <br>
+
+		<!-- Outputs time until future date -->
+		<div align="center">
+			<textarea rows="6" placeholder="Type the date like this: November 22, 2017 19:23:45" id="timeUntilDate"></textarea>
+		</div>
+		<button onclick="timeUntil()">Time Until Date</button>
+		<div id="timeUntilOutput"></div> <br>
+
+		<!-- Converts deary to binary -->
+		<form>
+			Denary Value: <input type="number" id="toBinaryValue" min="1">
+		</form>
+		<button onclick="toBinary()">Denary to Binary</button>
+		<div id="toBinaryOutput"></div> <br>
+
+		<!-- Calculate the approximate number of partitions an integer has -->
+		<form>
+			Value: <input type="number" id="partitionsValue" min="1">
+		</form>
+		<button onclick="partitions()">Number of Partitions</button>
+		<div id="partitionsOutput"></div> <br>
+
+		<!-- Generates a random factorable, quadratic formula -->
+		<button onclick="factorableQuadratic()">Factorable Quadratic</button>
+		<div id="factorableOutput"></div> <br>
+
+		<!-- Calculates the median, the other quartiles and the interquartile range -->
+		<form>
+			Length: <input type="number" id="IQRLength" min="1"> <br>
+			Max: <input type="number" id="IQRMax">
+		</form>
+		<button onclick="medianIQR()">Quartiles and IQR</button>
+		<div id="IQROutput"></div> <br>
+
+		<!-- A written method of finding the approximate square root -->
+		<form>
+			Value: <input type="number" id="sqrtOf">
+		</form>
+		<button onclick="approximateSqrt()">Approximate Square Root</button>
+		<div id="approxSqrtOutput"></div> <br>
+
+		<!-- Normal Distribution Calculator -->
+		<form>
+			Value: <input type="number" id="ndfValue"> <br>
+			Mean: <input type="number" id="ndfMean"> <br>
+			Standard Deviation: <input type="number" id="ndfSD">
+		</form>
+		<button onclick="normalDistribution()">Normal Distribution Function</button>
+		<div id="ndfOutput"></div> <br>
+
+		<!-- Mode, Median and Mean calculator -->
+		<form>
+			Max: <input type="number" id="avgMax"> <br>
+			Min: <input type="number" id="avgMin"> <br>
+			Array Length: <input type="number" id="avgLength" min="1">
+		</form>
+		<button onclick="averages()">Mode, Median and Mean</button>
+		<div id="avgOutput"></div> <br>
+
+		<!-- Morse Code Converter -->
+		<div align="center">
+			<textarea rows="6" placeholder="Type your message here, either normal letters, numbers, and punctuation or Morse code using '.' for a dot, '-' for a dash, separating letters by spaces and words by '/'. Also, separate Morse code letters with space" id="morseInput"></textarea>
+		</div>
+		<button onclick="morseConvert()">Convert Sentence or Morse Code</button>
+		<div id="morseOutput"></div> <br>
+
+		<!-- Numerical Methods: Iterations -->
+		<div class="bold">x³ + ax² + bx + c</div>
+		<form>
+			Starting Number: <input type="number" id="iterationStart"> <br>
+			Significant Figures: <input type="number" id="iterationSigFigures" min="1"> <br>
+			a: <input type="number" id="iterationA"> <br>
+			b: <input type="number" id="iterationB"> <br>
+			c: <input type="number" id="iterationC">
+		</form>
+		<button onclick="iteration()">Iterations</button>
+		<div id="iterationOutput"></div> <br>	
+
+		<!-- Estimating PI using the Monte Carlo Method -->
+		<form>
+			Max: <input type="number" id="monteCarloMax" min="1"> <br>
+			Number of Repetitions: <input type="number" id="monteCarloRep" min="1">
+		</form>
+		<button onclick="monteCarlo()">Monte Carlo Method</button>
+		<div id="monteCarloOutput"></div> <br>
+
+		<!-- Number to Base 64 -->
+		<form>
+			Number to Base-64: <input type="number" id="base64ConvertNum" min="1">
+		</form>
+		<button onclick="base64Convert()">Convert to Base-64</button>
+		<div id="base64ConvertOutput"></div> <br>
+
+		<!-- Finds out if the number inputted is a Happy Number -->
+		<form>
+			Number: <input type="number" id="happyNumbersInput" min="1">
+		</form>
+		<button onclick="happyNumbers()">Is it a Happy Number?</button>
+		<div id="happyNumbersOutput"></div> <br>
+
+		<!-- Other -->
+		<button onclick="reload()">Reload Page</button>
 
 		<!-- Other -->
 		<a href="https://twitter.com/the_banana_guy_" target="_blank">
