Updated TODO List

--- a/index.html
+++ b/index.html
@@ -174,13 +174,14 @@
 		<div id="morseOutput"></div> <br>
 
 		<!-- Numerical Methods: Iterations -->
-		<div class="bold">x³ + ax² + bx + c</div>
+		<div class="bold">ax³ + bx² + cx + d</div>
 		<form>
 			Starting Number: <input type="number" id="iterationStart"> <br>
 			Significant Figures: <input type="number" id="iterationSigFigures" min="1"> <br>
 			a: <input type="number" id="iterationA"> <br>
 			b: <input type="number" id="iterationB"> <br>
-			c: <input type="number" id="iterationC">
+			c: <input type="number" id="iterationC"> <br>
+			d: <input type="number" id="iterationD">
 		</form>
 		<button onclick="iteration()">
 			<div>
