--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 		<div class="bold">ax³ + bx² + cx + d</div>
 		<form>
 			Starting Number: <input type="number" id="iterationStart"> <br>
-			Significant Figures: <input type="number" id="iterationSigFigures" min="1"> <br>
+			Decimal Places: <input type="number" id="iterationDecimalPlaces" min="1"> <br>
 			a: <input type="number" id="iterationA"> <br>
 			b: <input type="number" id="iterationB"> <br>
 			c: <input type="number" id="iterationC"> <br>
