--- a/index.html
+++ b/index.html
@@ -227,6 +227,18 @@
 		</button>
 		<div id="happyNumbersOutput"></div> <br>
 
+		<!-- Displays Carmichael Numbers -->
+		<form>
+			Min: <input type="number" id="carmichaelMin"> <br>
+			Max: <input type="number" id="carmichaelMax">
+		</form>
+		<button onclick="carmichael()">
+			<div>
+				<p>Get Carmichael Numbers</p>
+			</div>
+		</button>
+		<div id="carmichaelOutput"></div> <br>
+
 		<!-- Other -->
 		<button onclick="reload()">
 			<div>
