--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
 
 	<!-- BigInteger.js https://github.com/peterolson/BigInteger.js -->
-	<script src="https://peterolson.github.com/BigInteger.js/BigInteger.min.js"></script>
+	<script type="text/javascript" src="BigInteger.js"></script>
 
 	<script type="text/javascript" src="main.js"></script>
 </head>
