--- a/index.html
+++ b/index.html
@@ -239,6 +239,18 @@
 		</button>
 		<div id="carmichaelOutput"></div> <br>
 
+		<!-- Displays Smallest Possible Number Divisible To All Numbers Between A & B -->
+		<form>
+			A: <input type="number" id="lcmA" min="1" max="39465"> <br>
+			B: <input type="number" id="lcmB" min="1" max="39466">
+		</form>
+		<button onclick="lcmAtoB()">
+			<div>
+				<p>Smallest Possible Number Divisble</p>
+			</div>
+		</button>
+		<div id="lcmOutput"></div> <br>
+
 		<!-- Other -->
 		<button onclick="reload()">
 			<div>
